# loreweaver

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .scratch_gw.txt  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.en.md  README.md  README.zh.md  app.py  conftest.py  docker-compose.yml  keys.example.toml  loreweaver-server.spec  pyproject.toml
.github/: codex-review-prompt.md  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  codex-review.yml  deploy-client.yml  redline-eval.yml  release-server.yml
adapters/cli/: adapter.py  demo.py  demo_module_en.txt  selfplay.py
adapters/discord/: __init__.py  adapter.py  voice.py
adapters/feishu/: adapter.py
adapters/onebot/: __init__.py  adapter.py
adapters/qq_official/: __init__.py  adapter.py  gateway.py
adapters/telegram/: __init__.py  adapter.py
agent/: companion_actor.py  context.py  forge.py  kp_tools.py  kp_tools_charcard.py  kp_tools_companion.py  kp_tools_forge.py  kp_tools_images.py  kp_tools_knowledge.py  kp_tools_maps.py  kp_tools_mechanics.py  kp_tools_npc.py  kp_tools_relationships.py  kp_tools_worldbook.py  loop.py  npc.py  npc_actor.py  prompt_builder.py  services.py  session_recap.py  tools.py
clients/: README.md  install.ps1  install.sh  package.json
clients/protocol/: e2e-smoke.ts  package.json  tsconfig.json
clients/ssh/: .gitignore  README.md  package.json  ssh_keys.example.toml  tsconfig.json
clients/tui/: capture-screenshots.sh  package.json  screenshot-render.py  tsconfig.json
clients/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
core/: battle_recording.py  battle_report.py  char_from_persona.py  character_manager.py  character_rules.py  charcard.py  coc_rules.py  dice_engine.py  document_manager.py  game_clock.py  luck.py  module_initializer.py  prompt_sections.py  relationships.py  rulepacks.py  skills.py  svg_map.py  worldbook.py  yaml_safety.py
docs/: chat-platforms.md  chat-platforms.zh.md  deploy.md  deploy.zh.md  plugins.md  protocol.md  protocol.zh.md  roadmap.md  roadmap.zh.md
gateway/: attachment_fs.py  audio.py  avatar.py  base_adapter.py  chat.py  commands.py  demo.py  director.py  events.py  hub.py  imagegen.py  media.py  member.py  ops.py  registry.py  render_chat.py  rooms.py  runner.py  session.py  turn.py
infra/: config.py  embeddings.py  file_permissions.py  i18n.py  imagegen.py  llm.py  llm_chatgpt.py  media_store.py  oauth_flows.py  providers.py  runtime_config.py  store.py  svg.py  usage_stats.py  vector.py  version.py
locales/en/: agent.json  battle.json  character.json  charcard.json  cli.json  commands.json  common.json  companion.json  dice.json  discord.json  document.json  feishu.json  gateway.json  hub.json  infra.json  kp_tools.json  loop.json  model.json  module.json  npc.json  ops.json  prompt.json  qq.json  relationships.json  rooms.json  runner.json  telegram.json  tui.json  worldbook.json
locales/zh/: agent.json  battle.json  character.json  charcard.json  cli.json  commands.json  common.json  companion.json  dice.json  discord.json  document.json  feishu.json  gateway.json  hub.json  infra.json  kp_tools.json  loop.json  model.json  module.json  npc.json  ops.json  prompt.json  qq.json  relationships.json  rooms.json  runner.json  telegram.json  tui.json  worldbook.json
net/: admin.py  iroh_server.py  keystore.py  room_backup.py  session.py  state.py  tui_server.py  updater.py
playtest/: keeper-behavior-eval.md
rulepacks/: coc7.yaml  dnd5e.yaml
scripts/: codex_pr_review.sh  codex_task.sh  coverage_sweep.py  deploy.sh  i18n_allowlist.txt  i18n_lint.py  longrun.py  package_server.py  play.py  playtest.py  tui_demo.sh
skills/image-gen/: SKILL.md
skills/mature-mode/: SKILL.md
skills/module-forge/: SKILL.md
skills/romance-relationships/: SKILL.md
skills/rule-forge/: SKILL.md
skills/skill-forge/: SKILL.md
skills/svg-mapmaker/: SKILL.md
tests/: test_app_adapters.py  test_app_subscription.py  test_behavior_eval.py  test_client_installers.py  test_doctor.py  test_package_server.py  test_redline_metrics.py
tests/adapters/: test_cli.py  test_cli_selfplay.py  test_discord.py  test_feishu.py  test_onebot.py  test_qq_official.py  test_telegram.py
tests/agent/: test_charcard.py  test_companion.py  test_context_localfs.py  test_forge.py  test_forge_module.py  test_forge_rulepack.py  test_integration_charcard_worldbook.py  test_kp_selfplay.py  test_kp_tools_forge.py  test_kp_tools_images.py  test_kp_tools_knowledge.py  test_kp_tools_maps.py  test_kp_tools_mechanics.py  test_kp_tools_mechanics_security.py  test_kp_tools_relationships.py  test_loop.py  test_npc.py  test_prompt_builder.py  test_prompt_skills.py  test_session_recap.py  test_tools.py  test_worldbook.py
tests/core/: test_battle.py  test_battle_hidden_roll.py  test_char_generation.py  test_character.py  test_character_manager_corruption.py  test_character_rules.py  test_charcard_limits.py  test_clock.py  test_dice.py  test_dice_wod_cap.py  test_document.py  test_luck.py  test_module.py  test_prompt_sections.py  test_relationships.py  test_rulepacks.py  test_skills.py  test_store.py  test_svg_map.py  test_yaml_safety.py
tests/fixtures/: behavioral_eval_scenarios.json  module_en.txt  module_zh.txt  selfplay_en.txt
tests/gateway/: test_base_adapter.py  test_botlist_wiring.py  test_censor_wiring.py  test_command_dice_events.py  test_command_gates.py  test_commands.py  test_commands_reset.py  test_crossplatform.py  test_director.py  test_events.py  test_hub.py  test_module_command.py  test_ops.py  test_registry.py  test_render_chat.py  test_rooms.py  test_runner_lifecycle.py  test_session.py  test_skill_censor_gate.py  test_turn_bot_toggle.py  test_turn_locks.py  test_turn_status.py  test_turn_usage.py
tests/i18n/: test_command_dialects.py  test_i18n.py  test_no_hardcoded.py
tests/infra/: test_config.py  test_embeddings.py  test_file_permissions.py  test_imagegen.py  test_llm.py  test_llm_chatgpt.py  test_llm_reasoning.py  test_media_store.py  test_oauth_flows.py  test_providers.py  test_runtime_config.py  (+4 more)
(+106 files in other folders)
