[project]
name = "loreweaver"
version = "0.1.0"
description = "A self-hosted, terminal-first AI Game Master / Keeper for any TTRPG system — dice bot + function-calling AI KP, system-agnostic (D&D 5e SRD + CoC7)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "loreweaver contributors" }]
keywords = ["ttrpg", "dnd", "coc", "dice", "ai", "game-master", "keeper", "discord"]

dependencies = [
    "d20>=1.1.2",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "numpy>=1.24",
    "websockets>=16",  # net/tui_server WebSocket server + clients (15.x proxy handling breaks localhost)
]

[project.optional-dependencies]
# Platform SDKs are optional extras so the core + CLI install stays light.
qq = ["qq-botpy>=1.2.1"]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3"]
feishu = ["lark-oapi>=1.2"]
vector = ["sqlite-vec>=0.1.1"]
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=0.3"]

[dependency-groups]
# Dev tooling as a uv-native group (PEP 735): `uv sync` installs it by default.
# pip users (fallback): `pip install -e . && pip install pytest pytest-asyncio ruff`,
# or with pip >= 25.1: `pip install --group dev`.
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
loreweaver = "app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# `net` is a real package. `app.py` is a top-level module (the `loreweaver`
# console script's entry point, and `python -m app --cli`'s target).
# `rulepacks`/`locales` are data-only "packages" (no __init__.py — PEP 420
# implicit namespace packages) so their files land as siblings of core/infra/
# etc. directly under site-packages, matching the runtime lookup in
# core/rulepacks.py and infra/i18n.py: both resolve their data dir as
# `Path(__file__).resolve().parent.parent / "<rulepacks|locales>"`, i.e. two
# levels up from the loader module — which is site-packages root in an
# installed (non-editable) wheel, not the source repo root.
#
# Also folds in a second, same-shape pre-existing omission found while
# hard-verifying this fix: `adapters` has real subpackages (adapters.cli,
# .discord, .feishu, .onebot, .qq_official, .telegram) that the old flat
# `["core", ..., "adapters"]` list never declared, so they were silently
# absent from the wheel too — `python -m app --cli` imports
# `adapters.cli.adapter` and would ModuleNotFoundError on a clean install.
packages = [
    "core",
    "infra",
    "agent",
    "gateway",
    "adapters",
    "adapters.cli",
    "adapters.discord",
    "adapters.feishu",
    "adapters.onebot",
    "adapters.qq_official",
    "adapters.telegram",
    "net",
    "rulepacks",
    "locales",
    "locales.en",
    "locales.zh",
]
py-modules = ["app"]

[tool.setuptools.package-data]
rulepacks = ["*.yaml"]
"locales.en" = ["*.json"]
"locales.zh" = ["*.json"]
# adapters/cli/demo.py loads this offline-demo module text via a
# `Path(__file__).with_name(...)` sibling-file read at import time; without
# declaring it, setuptools ships only `*.py` for a package and the import
# crashes with FileNotFoundError on a clean install.
"adapters.cli" = ["*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]
"adapters/*/vendor_*.py" = ["ALL"]
